<resources>
    <string name="app_name">LinkAd</string>
    <string name="create_account">+ CREATE ACCOUNT</string>
    <string name="have_account">ALREADY HAVE A ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="region">地區</string>
    <string name="view">觀看</string>
    <string name="comment">評論</string>
    <string name="like">喜歡</string>
    <string name="dislike">不喜歡</string>
    <string name="viewRate">觀看占比</string>
    <string name="videoRate">影片占比</string>
    <string name="videoAll">總影片</string>
    <string name="sub">訂閱</string>
    <string name="rank">排名</string>
    <string name="mostView">最多觀看</string>
    <string name="mostComment">最多評論</string>
    <string name="mostLike">最多喜歡</string>
    <string name="category">Category</string>
    <string name="channel_name">Channel Name</string>
    <string name="videoTitle">影片標題</string>
    <string name="videoPublishedTime">影片發佈時間</string>
    <string name="updateTime">數據更新時間</string>
    <string name="judge">評價</string>
    <string name="rate">比率</string>
    <string name="likeRate">喜欢比例</string>
    <string name="dislikeRate">不喜欢比例</string>
    <string name="commentRate">评论比例</string>

    <string-array name="recycle_row_main_screen_title">
        <item>Card 1</item>
        <item>Card 2</item>
        <item>Card 3</item>
        <item>Card 4</item>
        <item>Card 5</item>
        <item>Card 6</item>
        <item>Card 7</item>
        <item>Card 8</item>
        <item>Card 9</item>
        <item>Card 10</item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
        <item>Card </item>
    </string-array>

    <string-array name="recycle_row_main_screen_description">
        <item>Description 1</item>
        <item>Description 2</item>
        <item>Description 3</item>
        <item>Description 4</item>
        <item>Description 5</item>
        <item>Description 6</item>
        <item>Description 7</item>
        <item>Description 8</item>
        <item>Description 9</item>
        <item>Description 10</item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>
        <item>Description </item>

    </string-array>

    <string-array name="recycle_row_home_category">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>
        <item>Category 6</item>
        <item>Category 7</item>
        <item>Category 8</item>
        <item>Category 9</item>
        <item>Category 10</item>
    </string-array>

</resources>