<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/linkAd"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/linkad_splach_screen" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_10dp_corners_white"
        android:orientation="vertical"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_email"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPassword"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_user"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_password"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_confirmPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_password"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signUp"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_10dp_corners_dark_grey"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:text="SIGN UP"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/txt_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/have_account"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>