<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        android:drawableRight="@drawable/ic_email"
        android:drawablePadding="0dp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_name"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        android:drawableRight="@drawable/ic_user"
        android:drawablePadding="0dp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        android:drawableRight="@drawable/ic_password"
        android:drawablePadding="0dp"
        />
    <!--<com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_password_confirm"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        android:drawableRight="@drawable/ic_password"
        android:drawablePadding="0dp"
        />-->
    <TextView
        android:id="@+id/password_confirm_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm Password is wrong"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        />

</LinearLayout>