<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_email"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="@color/myTextColor"
            android:drawableRight="@drawable/ic_password"
            android:drawablePadding="0dp"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#431F63"
        android:text="LOGIN"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

</LinearLayout>