<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/videoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="1dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/channelView"
        app:layout_constraintTop_toBottomOf="@+id/channelView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/home_card_bg">

            <TextView
                android:id="@+id/videoTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:elevation="1dp"
                android:maxEms="16"
                android:paddingHorizontal="2dp"
                android:singleLine="true"
                android:text="@string/videoTitle"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageConstraintLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:foreground="@drawable/video_card_overlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tag_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"

                    android:layout_marginTop="4dp"
                    android:background="@drawable/tag_bg"
                    android:elevation="1dp"
                    android:ellipsize="end"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tag_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/tag_bg"
                    android:elevation="1dp"
                    android:ellipsize="end"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_1"
                    app:layout_constraintStart_toEndOf="@+id/tag_1"
                    app:layout_constraintTop_toTopOf="@+id/tag_1"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tag_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/tag_bg"
                    android:elevation="1dp"
                    android:ellipsize="end"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_2"
                    app:layout_constraintStart_toEndOf="@+id/tag_2"
                    app:layout_constraintTop_toTopOf="@+id/tag_2"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/video_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/video_image"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_viewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_4dp_corners_dark_grey"
                android:paddingHorizontal="2dp"
                android:text="@string/view"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageConstraintLayout" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@drawable/shape_4dp_corners_dark_grey"
                android:paddingHorizontal="2dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="16sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_viewValue"
                app:layout_constraintStart_toEndOf="@+id/tv_viewValue"
                app:layout_constraintTop_toTopOf="@+id/tv_viewValue" />


            <TextView
                android:id="@+id/tv_likeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_4dp_corners_dark_green"
                android:paddingHorizontal="2dp"
                android:text="@string/likeRate"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_viewValue"
                app:layout_constraintTop_toBottomOf="@+id/tv_viewValue" />

            <TextView
                android:id="@+id/tv_dislikeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@drawable/shape_4dp_corners_dark_red"
                android:paddingHorizontal="2dp"
                android:text="@string/dislikeRate"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_likeRate"
                app:layout_constraintStart_toEndOf="@+id/tv_likeRate"
                app:layout_constraintTop_toTopOf="@+id/tv_likeRate" />

            <TextView
                android:id="@+id/tv_commentRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@drawable/shape_4dp_corners_dark_orange"
                android:paddingHorizontal="2dp"
                android:text="@string/commentRate"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dislikeRate"
                app:layout_constraintStart_toEndOf="@+id/tv_dislikeRate"
                app:layout_constraintTop_toTopOf="@+id/tv_dislikeRate" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>